--- a/src/header/sass/header.scss
+++ b/src/header/sass/header.scss
@@ -19,3 +19,36 @@
       gap: 40px;
    }
 }
+.platform-rectangle {
+   padding: 535px 0px 0px 656px;
+   .platform {
+      padding: 70px 70px 70px 70px;
+      width: 624px;
+      height: 368.26px;
+      background: rgb(248, 242, 0);
+      p {
+         color: rgb(0, 0, 0);
+         font-family: Archangelsk;
+         font-size: 62px;
+         font-weight: 400;
+         line-height: 63px;
+         letter-spacing: 0%;
+         text-align: left;
+      }
+      button {
+         background: rgb(0, 0, 0);
+         display: flex;
+         flex-direction: row;
+         justify-content: flex-start;
+         align-items: center;
+         padding: 19px 50px 19px 50px;
+         color: rgb(248, 242, 0);
+         font-family: Archangelsk;
+         font-size: 24px;
+         font-weight: 700;
+         line-height: 40px;
+         letter-spacing: 0%;
+         text-align: center;
+      }
+   }
+}
