--- a/src/sass/font.scss
+++ b/src/sass/font.scss
@@ -2,3 +2,10 @@
    font-family: 'Archangelsk';
    src: url('../assets/fonts/Archangelsk.ttf');
 }
+
+@font-face {
+   font-family: 'Roboto', sans-serif;
+   font-weight: 400;
+   font-style: normal;
+   src: url('../assets/fonts/Roboto.ttf');
+}
