--- a/src/header/sass/header.scss
+++ b/src/header/sass/header.scss
@@ -1,6 +1,7 @@
 .header {
    margin: 0 auto;
    background: url(/src/assets/hero.svg) no-repeat center top / cover;
+   max-width: 1920px;
    .container {
       align-items: center;
       .nav-menu {
