--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,3 +8,12 @@
    max-width: 1920px;
    padding: 0px 320px 0px 320px;
 }
+
+section {
+   max-width: 1920px;
+   margin: 0 auto;
+}
+
+body {
+   font-family: Roboto;
+}
